[gd_scene load_steps=22 format=3 uid="uid://dsfx12lplx0l6"]

[ext_resource type="PackedScene" uid="uid://b430y3kk4qq8v" path="res://levels/level.tscn" id="1_4kknm"]
[ext_resource type="Script" path="res://levels/outside.gd" id="2_2aks5"]
[ext_resource type="Texture2D" uid="uid://bjtofko0blnki" path="res://assets/graphics/ground/stones.png" id="2_7a1gp"]
[ext_resource type="Texture2D" uid="uid://b6bhj52lxtb4a" path="res://assets/graphics/tilesets/outside_walls.png" id="3_i3btk"]
[ext_resource type="Texture2D" uid="uid://bf2reed0f2a4l" path="res://assets/graphics/tilesets/soil.png" id="4_wqf3v"]
[ext_resource type="PackedScene" uid="uid://boayl2rumytwa" path="res://objects/garage.tscn" id="5_7puqn"]
[ext_resource type="PackedScene" uid="uid://dm5ax2kwnfqv8" path="res://objects/steam_vent.tscn" id="6_qfaxh"]
[ext_resource type="Texture2D" uid="uid://xpafs4voy4bn" path="res://assets/graphics/decals/moss/moss_4.png" id="7_of6sn"]
[ext_resource type="Texture2D" uid="uid://soxm84ddrbn5" path="res://assets/graphics/decals/moss/moss_1.png" id="8_mkgun"]
[ext_resource type="Texture2D" uid="uid://0oibexgb7gru" path="res://assets/graphics/decals/moss/moss_2.png" id="9_p1tjk"]
[ext_resource type="Texture2D" uid="uid://v5sg4eq8rrh8" path="res://assets/graphics/decals/moss/moss_3.png" id="10_n0bo1"]
[ext_resource type="Texture2D" uid="uid://ek1ycxnktbs2" path="res://assets/graphics/decals/moss/moss_5.png" id="11_b3yyf"]
[ext_resource type="Texture2D" uid="uid://couistjykrq7e" path="res://assets/graphics/decals/dirt_patch.png" id="12_l8pch"]
[ext_resource type="PackedScene" uid="uid://bke76ljm4ho7j" path="res://objects/gate.tscn" id="14_as5cl"]
[ext_resource type="PackedScene" uid="uid://bhrc1k35l564x" path="res://objects/box.tscn" id="15_67h6s"]
[ext_resource type="PackedScene" uid="uid://csmq20lhow4hu" path="res://objects/toilet.tscn" id="16_ym55e"]
[ext_resource type="PackedScene" uid="uid://cy00wx4lnxt8i" path="res://items/item.tscn" id="18_g6r2s"]
[ext_resource type="PackedScene" uid="uid://csgh73y3pl1e0" path="res://User Interface/level_transition.tscn" id="18_wic5x"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_r0ret"]
texture = ExtResource("3_i3btk")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-68, -63, 195, -58, 195, 60, -64, 61)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-195, -58, 195, -58, 195, 60, -195, 62)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(68, 63, -195, 58, -195, -60, 64, -61)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(63, -68, 58, 195, -60, 195, -61, -64)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-60.5, -65, 195, -66, 195, 60, 61.5, 58, 59.5, 195, -61.5, 195)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(65, -60.5, 66, 195, -60, 195, -58, 61.5, -195, 59.5, -195, -61.5)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(58, -195, 58, 195, -60, 195, -62, -195)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-65, 60.5, -66, -195, 60, -195, 58, -61.5, 195, -59.5, 195, 61.5)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(60.5, 65, -195, 66, -195, -60, -61.5, -58, -59.5, -195, 61.5, -195)
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-63, 68, -58, -195, 60, -195, 61, 64)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_r5ko8"]
texture = ExtResource("4_wqf3v")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_qbgfy"]
tile_size = Vector2i(390, 390)
physics_layer_0/collision_layer = 8
physics_layer_0/collision_mask = 15
sources/1 = SubResource("TileSetAtlasSource_r0ret")
sources/2 = SubResource("TileSetAtlasSource_r5ko8")

[node name="Level" instance=ExtResource("1_4kknm")]
script = ExtResource("2_2aks5")

[node name="GroundBrick" type="Sprite2D" parent="Ground" index="0"]
texture_repeat = 2
texture = ExtResource("2_7a1gp")
region_enabled = true
region_rect = Rect2(0, 0, 15000, 15000)

[node name="TileMap" type="TileMap" parent="Ground" index="1"]
tile_set = SubResource("TileSet_qbgfy")
format = 2
layer_0/name = "Soil"
layer_0/tile_data = PackedInt32Array(65533, 65538, 1, 131069, 65538, 1, 196605, 65538, 1, 262141, 65538, 1, 327677, 65538, 1, 393213, 65538, 1, 65534, 65538, 1, 131070, 65538, 1, 196606, 65538, 1, 262142, 65538, 1, 327678, 65538, 1, 393214, 65538, 1, 65535, 65538, 1, 131071, 65538, 1, 196607, 65538, 1, 262143, 65538, 1, 327679, 65538, 1, 393215, 65538, 1, 0, 65538, 1, 65536, 65538, 1, 131072, 65538, 1, 196608, 65538, 1, 262144, 65538, 1, 327680, 65538, 1, 1, 65538, 1, 65537, 65538, 1, 131073, 65538, 1, 196609, 65538, 1, 262145, 65538, 1, 327681, 65538, 1, 2, 65538, 1, 65538, 65538, 1, 131074, 65538, 1, 196610, 65538, 1, 262146, 65538, 1, 327682, 65538, 1, 3, 65538, 1, 65539, 65538, 1, 131075, 65538, 1, 196611, 65538, 1, 262147, 65538, 1, 327683, 65538, 1, -3, 65538, 0, -2, 65538, 0, -1, 65538, 0, -65536, 65538, 0, -65535, 65538, 0, -65534, 65538, 0, -65533, 65538, 0, 4, 131074, 1, 65540, 131074, 1, 131076, 131074, 1, 196612, 131074, 1, 262148, 131074, 1, 327684, 131074, 1, 393219, 65538, 2, 393218, 65538, 2, 393217, 65538, 2, 393216, 65538, 2, 458751, 65538, 2, 458750, 65538, 2, 393212, 2, 1, 327676, 2, 1, 262140, 2, 1, 196604, 2, 1, 131068, 2, 1, 65532, 2, 1, -4, 2, 0, 393220, 131074, 2, -65532, 131074, 0, 458748, 2, 2, 458749, 65538, 2)
layer_1/name = "Walls"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(-131076, 65537, 0, -196605, 65537, 0, -196604, 65537, 0, -131077, 65537, 0, -196603, 65537, 0, -131078, 65537, 0, -196602, 65537, 0, -131079, 65537, 0, -196601, 131073, 1, -131080, 65537, 1, -65544, 1, 2, -8, 1, 2, 65528, 1, 2, 131064, 1, 2, 196600, 1, 2, 262136, 1, 3, -131065, 1, 2, -65529, 1, 2, 7, 1, 2, 65543, 1, 2, 131079, 1, 2, 196615, 1, 2, 262151, 1, 2, 327687, 1, 2, 393223, 131073, 2, 393222, 65537, 0, 393221, 65537, 0, 393220, 65537, 0, 393219, 65537, 0, 393218, 65537, 0, 393217, 65537, 0, 393216, 65537, 0, 458751, 65537, 0, 458750, 65537, 0, 458749, 65537, 0, 458748, 65537, 0, 458747, 1, 0)

[node name="Garage" parent="Ground/TileMap" index="0" instance=ExtResource("5_7puqn")]
position = Vector2(-3686, 2770)
rotation = -0.772703

[node name="SteamVent" parent="Ground" index="2" instance=ExtResource("6_qfaxh")]
position = Vector2(-2206, -399)

[node name="Moss4" type="Sprite2D" parent="Ground" index="3"]
position = Vector2(-1148, 1974)
texture = ExtResource("7_of6sn")

[node name="Moss1" type="Sprite2D" parent="Ground" index="4"]
position = Vector2(782, 1079)
texture = ExtResource("8_mkgun")

[node name="Moss2" type="Sprite2D" parent="Ground" index="5"]
position = Vector2(-608, 611)
texture = ExtResource("9_p1tjk")

[node name="Moss3" type="Sprite2D" parent="Ground" index="6"]
position = Vector2(782, 1819)
texture = ExtResource("10_n0bo1")

[node name="Moss5" type="Sprite2D" parent="Ground" index="7"]
position = Vector2(967, 264)
texture = ExtResource("11_b3yyf")

[node name="DirtPatch" type="Sprite2D" parent="Ground" index="8"]
modulate = Color(0.486275, 0.478431, 0.478431, 1)
position = Vector2(-109, 1314)
texture = ExtResource("12_l8pch")

[node name="Box" parent="." index="1" instance=ExtResource("15_67h6s")]
position = Vector2(-1534, 412)
rotation = -1.67001
scale = Vector2(0.6, 0.6)

[node name="Toilet" parent="." index="2" instance=ExtResource("16_ym55e")]
position = Vector2(-1483, 141)
rotation = -1.33805
scale = Vector2(0.6, 0.6)

[node name="Player" parent="." index="5"]
position = Vector2(2.99998, -226)
rotation = 1.309

[node name="Gate" parent="." index="6" instance=ExtResource("14_as5cl")]
position = Vector2(-24, -1031)
metadata/_edit_lock_ = true

[node name="LevelTransition" parent="." index="7" instance=ExtResource("18_wic5x")]

[node name="Item" parent="." index="8" instance=ExtResource("18_g6r2s")]
position = Vector2(-740, 275)

[connection signal="player_entered" from="Ground/TileMap/Garage" to="." method="_on_garage_player_entered"]
[connection signal="player_exited" from="Ground/TileMap/Garage" to="." method="_on_garage_player_exited"]
[connection signal="player_entered_inside" from="Gate" to="." method="_on_gate_player_entered_inside"]
